[package]
name = "cotametais-lme-api-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.4", features = ["v4", "fast-rng"] }
dotenv = "0.15.0"
futures = "0.3.28"
utoipa = "3.5.0" 
utoipa-rapidoc = {version="0.1.0", features=["actix-web"]}


[dependencies.mongodb]
version = "2.6.0"
default-features = false
features = ["async-std-runtime"] 

